# v-router

./: .bumpversion.cfg  .env.local  .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  ruff-validations.yml  version-bump-and-auto-release.yml
api/client/: index.html
api/llm/: index.html
docs/: CLAUDE.md  index.md
docs/api/: client.md  llm.md
docs/examples/: basic.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/guide/: function-calling.md  langsmith-tracing.md  multimodal-content.md
docs/providers/: overview.md
examples/: langsmith_tracing.ipynb  multimodal_content.ipynb  provider_packages.ipynb  quickstart.ipynb  quickstart_models.ipynb  quickstart_tool_calling.ipynb
examples/basic/: index.html
examples/providers/: anthropic_provider.ipynb  google_provider.ipynb  openai_provider.ipynb
examples/providers/assets/: order.docx
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
guide/function-calling/: index.html
providers/overview/: index.html
search/: search_index.json
src/v_router/: __init__.py  client.py  logger.py  models.yml  router.py
src/v_router/classes/: __init__.py  llm.py  message.py  messages.py  response.py  tools.py
src/v_router/providers/: __init__.py  (+4 more)
stylesheets/: extra.css
tests/: __init__.py  test_client_aimessage.py  test_langsmith_tracing.py  test_multimodal.py  test_router_tools.py  test_tools.py
tests/models/: test_llm.py  test_message.py  test_response.py
